<!--
    Copyright 2012 Fahad Al-Khameesi, Madeleine Appert, Niklas Logren, Arild Matsson and Jonathan Orrö.
    
    This file is part of Bibbla.

    Bibbla is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Bibbla is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Bibbla.  If not, see <http://www.gnu.org/licenses/>.
 -->

<resources>

    <string name="app_name">Bibbla</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="activity_main_content">Text</string>
    <string name="text">Hej</string>

    <!-- Searching -->
    <string name="button_search">Sök</string>
    <string name="search_loading">Söker…</string>
    <string name="search_no_results">Inga resultat. Var vänlig försök igen
        med ett vanligare sökord. Om du vill.</string>
    <string name="edit_search">Boktitel etc.</string>
    <string name="available_description">Om boken går att låna</string>
    <string name="overlay_title">Lorem Ipsum</string>
    <string name="more_search_results">Fler sökresultat</string>

    <!-- Log in -->
    <string name="login_heading">Logga in</string>
    <string name="login_info">Logga in med ditt lånekort för att nå personliga
        funktioner såsom att reservera böcker eller se över dina lån. Om du
        inte har ett lånekort kan gå till något av biblioteken och be om ett.
        </string>
    <string name="login_name_hint">Efternamn</string>
    <string name="login_card_hint">Lånekortsnummer</string>
    <string name="login_pin_hint">PIN-kod</string>
    <string name="login_send_text">Logga in</string>
    <string name="login_fail_msg">Det gick inte att logga in. Dubbelkolla
        uppgifterna.</string>

    <!-- Profile -->
    <string name="debt_view_text">Skuld: %d kr</string>
    <string name="logout_text">Logga ut</string>
    <string name="my_loans_heading">Mina lån</string>
    <string name="my_reservations_heading">Mina reservationer</string>
    <string name="loans_list_error">Kunde inte hämta lånlistan</string>
    <string name="reservations_list_error">Kunde inte hämta listan med reservationer</string>

    <!-- Log in -->
    <string name="login_heading">Logga in</string>
    <string name="login_info">Logga in med ditt lånekort för att nå personliga
        funktioner såsom att reservera böcker eller se över dina lån. Om du
        inte har ett lånekort kan gå till något av biblioteken och be om ett.
        </string>
    <string name="login_name_hint">Efternamn</string>
    <string name="login_card_hint">Lånekortsnummer</string>
    <string name="login_pin_hint">PIN-kod</string>
    <string name="login_send_text">Logga in</string>
    <string name="login_fail_msg">Det gick inte att logga in. Dubbelkolla
        uppgifterna.</string>

    <!-- Profile -->
    <string name="debt_view_text">Skuld: %d kr</string>
    <string name="logout_text">Logga ut</string>
    <string name="my_loans_heading">Mina lån</string>
    <string name="my_reservations_heading">Mina reservationer</string>
    <string name="loans_list_error">Kunde inte hämta lånlistan</string>
    <string name="reservations_list_error">Kunde inte hämta listan med reservationer</string>
    
    <!-- Book overlay -->
    <string name="book_header">Detaljerad Information</string>
    <string name="title_book_title">Titel</string>
        <string name="title_book_authour">Författare</string>
        <string name="title_book_isbn">ISBN</string>
        <string name="title_media_type">Typ av media</string>
        <string name="title_physical_info">Fysisk information</string>
    <string name="button_reserve">Reservera</string>
    <string name="library_prompt">Choose a country</string>
 
    <string-array name="library_arrays">
        <item>Askim</item>
		<item>Backa</item>
		<item>Bergsjön</item>
		<item>Biskopsgården</item>
		<item>Bokbuss Tur A</item>
		<item>Bokbuss Tur B</item>
		<item>Donsö</item>
		<item>Dynamo på Stadsmuseet</item>
		<item>Gamlestaden</item>
		<item>Global på Stadsmuseet</item>
		<item>Guldheden</item>
		<item>Hammarkullen</item>
		<item>Hisingen</item>
		<item>Hjällbo</item>
		<item>Härlanda/Örgryte</item>
		<item>Högsbo</item>
		<item>Kortedala</item>
		<item>Kyrkbyn</item>
		<item>Kärra</item>
		<item>Linnéstaden</item>
		<item>Majorna</item>
		<item>Miini på Röhsska</item>
		<item>Styrsö</item>
		<item>Torslanda</item>
		<item>Trulsegården</item>
		<item>Tuve</item>
		<item>Västra Frölunda</item>
		<item>Älvstranden</item>
		<item>300m2 på Södra Hamng</item>
    </string-array>
    
     <!-- Library -->    
    <string name="title_open">Öppettider</string>
    <string name="title_adr">Besöksadress</string>
    <string name="title_tel">Telefonnummer</string>
    <string name="title_email">Epost</string>
    <string name="title_postadr">Postaddress</string>
    
</resources>