<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Log in header -->
    <TextView android:id="@+id/login_heading"
        style="@style/Heading"
        android:text="@string/login_heading"/>
    
    <TextView android:id="@+id/login_info"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/login_info"/>
    
    <!-- Input fields -->

    <EditText
        android:id="@+id/login_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_name_hint"
        android:inputType="textCapWords|textPersonName" />
    
    <EditText
        android:id="@+id/login_card_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_card_hint"
        android:inputType="textCapCharacters" />
    
    <EditText
        android:id="@+id/login_pin_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pin_hint"
        android:inputType="number|phone" />
    
    <!-- Submit -->
    <Button android:id="@+id/login_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="@string/login_send_text"/>
    
</LinearLayout>