<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- User's full name -->
    <TextView android:id="@+id/name_heading"
        android:text=""
        style="@style/Heading"/>
    
    <!-- Debt and log-out button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView android:id="@+id/debt_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
        	android:gravity="center"
            android:text="@string/debt_view_text"/>
        
        <Button android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:text="@string/logout_text"/>
    </LinearLayout>
    
    <!-- My loans -->
    <TextView android:id="@+id/loans_heading"
        style="@style/Heading"
        android:text="@string/my_loans_heading"/>
    
    <ListView android:id="@+id/loans_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>
    
    <!-- My reservations -->
    <TextView
        android:id="@+id/reservations_heading"
        style="@style/Heading"
        android:text="@string/my_reservations_heading"/>
    
    <ListView android:id="@+id/reservations_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>
	
</LinearLayout>